# freetalk

./: .gitignore  AUTHORS  AUTHORS.md  ChangeLog  FACEBOOK.md  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  bootstrap  configure  configure.ac
contrib/argp-standalone/: config.h  config.h.in
doc/: Makefile.am  Makefile.in  authors.texi  freetalk.1  freetalk.info  freetalk.texi  gpl.texi  permissions.texi  stamp-vti
examples/: Makefile.am  Makefile.in  daemon.ft  freetalk.scm  hello-world.ft  mimic.ft
extensions/: Makefile.am  Makefile.in  beep.scm  broadcast.scm  color.scm  connection.scm  dict-buddy.scm  dyn-commands.scm  file-transfer.scm  first-time-run.sh  first-time-run.sh.in  hacker-romance.scm  history.scm  init.scm  init.scm.in  login.scm  loudscream.scm  mr-oxford.scm  pipe.scm  proud-of-freetalk.scm  roster.scm  shell.scm  smart-prompt.scm  state.scm  url.scm  utils.scm
po/: LINGUAS  Makevars  POTFILES.in  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  freetalk.pot
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.cc  callbacks.h  commands.c  commands.cc  commands.h  common.h  compat.c  compat.cc  compat.h  extensions.c  extensions.cc  extensions.h  facebook.c  facebook.h  file_transfer.c  file_transfer.cc  file_transfer.h  freetalk.c  freetalk.cc  freetalk.h  interpreter.c  interpreter.cc  interpreter.h  more.c  more.h  presence.c  presence.cc  presence.h  primitives.c  primitives.cc  primitives.h  register.c  register.cc  register.h  roster.c  roster.cc  roster.h  (+3 more)
