EXTENSIONS = \
	init.scm \
	loudscream.scm \
	login.scm \
	dyn-commands.scm \
	beep.scm \
	color.scm \
	dict-buddy.scm \
	shell.scm \
	pipe.scm \
	state.scm \
	connection.scm \
	roster.scm \
	mr-oxford.scm \
	utils.scm \
	history.scm \
	url.scm \
	proud-of-freetalk.scm \
	broadcast.scm \
	hacker-romance.scm \
	smart-prompt.scm \
	first-time-run.sh

EXTRA_DIST = $(EXTENSIONS)

Extensionsdir = $(datadir)/freetalk/extensions

Extensions_DATA  = $(EXTENSIONS)

CLEANFILES = init.scm first-time-run.sh *~
